--- a/Projects/STM32MP13xx/STM32CubeIDE/.project
+++ b/Projects/STM32MP13xx/STM32CubeIDE/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>STM32PRGFW_UTIL</name>
+	<name>STM32PRGFW_UTIL_MP13xx</name>
 	<comment></comment>
 	<projects>
 	</projects>
